--- a/style.css
+++ b/style.css
@@ -3,20 +3,21 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
 
 }
 
 body {  /*tamanho da págian inteira com a cor de fundo degrade*/
-    width: 1366px; /*tamanho do monitor que se usa o meu é de 27p*/
+    max-width: 1440px; /*tamanho do monitor que se usa o meu é de 27p*/
     height: 2328px;
+    margin: 0 auto;
     background: linear-gradient(180deg, #141E30 0%, #243B55 100%);
 }
 
+/*Inicio do menu*/
 header {
     padding: 16px 0;
-    width: 1366px;   /*tamanho do monitor que se usa o meu é de 27p 1920*/
+    width: 1440px;   /*tamanho do monitor que se usa o meu é de 27p 1920*/
     height: 88px;
     flex-shrink: 0;
     border-bottom: 1px solid var(--borda, #1E2D55);
@@ -24,7 +25,13 @@ header {
     backdrop-filter: blur(2px);
     position: fixed;
     
+    
+    
 
+}
+
+.box {
+    margin: 0px 15px 0px 0px;
 }
 
 header img { /*espaçamentos da logo*/
@@ -33,7 +40,7 @@ header img { /*espaçamentos da logo*/
     height: 63px;
     flex-shrink: 0;
     margin-left: 112px;
-    
+   
     }
 
 header nav li {
@@ -53,7 +60,6 @@ header nav li a {
 }
 
 .container {
-    max-width: 1288px;
     width: 100%;
     margin: 0 auto;
 }
@@ -69,8 +75,11 @@ nav {
     align-items: center;
     justify-content: space-between  ;
 }
+/*fim do menu*/
 
 /*inicia o pesquisa*/
+
+
 .container-1{    /*Menu pesquisa site de referência https://webdesign.tutsplus.com/tutorials/css-experiments-with-a-search-form-input-and-button--cms-22069*/
     width: 300px;
     vertical-align: middle;
@@ -141,19 +150,24 @@ hr {
 
 /*inicio do carrorel*/
 
+section {
+    max-width: 1216px;
+}
  .container__carrocel {
     display: flex;
+    padding: 80px;
     
-    justify-content: center;
+    margin: 0px 0px 0px 35px;
     
-    padding-top: 176px;
     gap: 32px;
-  
+    
+    
 }
 
+
 .imagem__carrocel img { /*imagem grande*/
-    width: 904px;
-    height: 418px;
+    width: 900px;
+    height: 414px;
     flex-shrink: 0;
     border-radius: 3px;
     border: 1px solid var(--borda, #1E2D55);
@@ -171,8 +185,8 @@ hr {
 }
 
 .img__lateral img {
-    width: 280px;
-    height: 120px;
+    width: 276px;
+    height: 118.7px;
     border-radius: 3px;
     border: 1px solid var(--borda, #1E2D55);
     background: #172339;
@@ -196,16 +210,12 @@ h1 {    /*comando para todos os h1*/
     padding: 60px;
     text-align: center;
     
-
 }
 
 
 .container__corpo {
     display: flex;
     flex-flow: column wrap;
-    
-   
-
 }
 section img{
     width: 176px;
@@ -213,30 +223,45 @@ section img{
     flex-shrink: 0;
     
 }
-   
 
 
 
-  .top10 {
+
+.top10 {
     display: flex;
+    width: 100%;
+    height: 357px;
+    flex-shrink: 0;
     gap: 32px;
     justify-content: center;
+    margin: 0px 0px 0px 100px;
+   
 }
 
 .lançamentos {
     display: flex;
+    width: 100%;
+    height: 342px;
+    flex-shrink: 0;
     gap: 32px;
     justify-content: center;
+    margin: 0px 0px 0px 100px;
+    
 }
 .trailers {
+    width: 100%;
+    height: 225px;
+    flex-shrink: 0;
     display: flex;
     gap: 69px;
     justify-content: center;
-
+    margin: 0px 0px 0px 100px;
+    
 }
 
 .trailers img {
-    width: 278px;
+    width: 100%;
     height: 213.475px;
     flex-shrink: 0;
+    
 }
