--- a/style.css
+++ b/style.css
@@ -212,7 +212,6 @@ h1 {    /*comando para todos os h1*/
     
 }
 
-
 .container__corpo {
     display: flex;
     flex-flow: column wrap;
@@ -224,9 +223,6 @@ section img{
     
 }
 
-
-
-
 .top10 {
     display: flex;
     width: 100%;
@@ -235,7 +231,6 @@ section img{
     gap: 32px;
     justify-content: center;
     margin: 0px 0px 0px 100px;
-   
 }
 
 .lançamentos {
@@ -263,5 +258,20 @@ section img{
     width: 100%;
     height: 213.475px;
     flex-shrink: 0;
+    
+}
+
+/*fim do corpo da página*/
+
+
+/*Inicio do footer */
+
+footer {
+    display: flex;
+    width: 1440px;
+    height: 100px;
+    flex-shrink: 0; 
+    border-bottom: 1px solid var(--borda, #1E2D55);
+    background: #172339;
     
 }
